--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -10,11 +10,6 @@
     </Style>    
 
     <!-- buttons -->
-    <Style TargetType="StackPanel" x:Key="buttonsBar">
-        <Setter Property="Orientation" Value="Horizontal" />
-        <Setter Property="Margin" Value="0,0,0,10" />
-    </Style>
-
     <Style x:Key="DialogButtonsPanel" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal" />
         <Setter Property="HorizontalAlignment" Value="Right" />
@@ -25,11 +20,6 @@
                 <Setter Property="Margin" Value="10,10,0,0"/>
             </Style>
         </Style.Resources>
-    </Style>
-
-    <Style TargetType="{x:Type Button}" x:Key="barButton">
-        <Setter Property="Margin" Value="0,0,10,0" />
-        <Setter Property="Padding" Value="4" />
     </Style>
 
     <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}" x:Key="squareButton" >
@@ -43,6 +33,17 @@
         <Setter Property="Width" Value="16" />
     </Style>
 
+    <Style x:Key="{x:Static ToolBar.ButtonStyleKey}" TargetType="{x:Type Button}">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="False">
+                <Setter Property="Opacity" Value="0.35"/>
+            </DataTrigger>
+        </Style.Triggers>
+        <Style.Resources>
+            <Style TargetType="Image" BasedOn="{StaticResource buttonIcon}">
+            </Style>
+        </Style.Resources>
+    </Style>
     <!-- forms -->
 
     
