--- a/Diagnosis.App/Controls/CardParts/Appointment.xaml
+++ b/Diagnosis.App/Controls/CardParts/Appointment.xaml
@@ -33,12 +33,8 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-
-        <StackPanel Style="{StaticResource buttonsBar}">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource barButton}" />
-                <Style TargetType="Image" BasedOn="{StaticResource buttonIcon}" />
-            </StackPanel.Resources>
+        
+        <ToolBar>
             <Button Command="{Binding AddHealthRecordCommand}" ToolTip="Редактировать новую запись (Ctrl + N)">
                 <DockPanel>
                     <Image Source="{StaticResource addImage}" />
@@ -65,7 +61,7 @@
                     </TextBlock>
                 </DockPanel>
             </Button>
-        </StackPanel>
+        </ToolBar>
 
         <ListView x:Name="records"
                   Grid.Row="1"                  
