--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -21,40 +21,51 @@
     <Grid x:Name="hr_grid" MouseDown="hr_grid_MouseDown" Focusable="True" Background="Transparent">
         <Grid.InputBindings>
         </Grid.InputBindings>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
-        </Grid.ColumnDefinitions>
-
-        <Button Command="{Binding CloseCommand}" Width="16" Height="16"
-                VerticalAlignment="Top" HorizontalAlignment="Right"
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        
+        <DockPanel>
+            <ToolBar DockPanel.Dock="Left">
+                <Button Command="{Binding Appointment.MoveHrSelectionCommand}" FontSize="16"
+                    CommandParameter="{StaticResource True}" ToolTip="Открыть предыдущую запись (Crtl + Стрелка вверх)">↑</Button>
+                <Button Command="{Binding Appointment.MoveHrSelectionCommand}" FontSize="16"
+                    CommandParameter="{StaticResource False}" ToolTip="Открыть следующую запись (Crtl + Стрелка вниз)" >↓</Button>
+                <Separator />
+                <Button Command="{Binding DataContext.Appointment.AddHealthRecordCommand,  RelativeSource={RelativeSource AncestorType=screens:NewCard}}"
+                    ToolTip="Добавить запись (Ctrl + Enter)">
+                    <DockPanel>
+                        <Image Source="{StaticResource addImage}" />
+                        <TextBlock Text="Добавить" />
+                    </DockPanel>
+                </Button>
+                <Button Command="{Binding RevertCommand}" ToolTip="Отменить изменения">
+                    <DockPanel>
+                        <Image Source="{StaticResource undoImage}" />
+                        <TextBlock Text="Отменить" />
+                    </DockPanel>
+                </Button>
+                <Separator />
+                <Button Command="{Binding DeleteCommand}" ToolTip="Удалить запись (Del)">
+                    <DockPanel>
+                        <Image Source="{StaticResource deleteImage}"  Width="16" />
+                        <TextBlock Text="Удалить" />
+                    </DockPanel>
+                </Button>
+            </ToolBar>
+            <Button Command="{Binding CloseCommand}" ToolBar.OverflowMode="Never" VerticalAlignment="Top"  Height="16" HorizontalAlignment="Right" Width="25"
                 ToolTip="Закрыть редактор, сохранив все изменения"
                 Grid.Column="2">
-            <DockPanel>
-                <Image Source="{StaticResource closeImage}"  Width="16" />
-            </DockPanel>
-        </Button>
-
-        <!--DataContext is CardViewModel-->
-        <StackPanel VerticalAlignment="Center" DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=screens:NewCard}}">
-            <StackPanel.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Padding" Value="5,10" />
-                    <Setter Property="FontSize" Value="16 " />
-                    <Setter Property="Margin" Value="0,5,5,5" />
-                </Style>
-            </StackPanel.Resources>
-
-            <Button Command="{Binding Appointment.MoveHrSelectionCommand}"
-                    CommandParameter="{StaticResource True}" ToolTip="Открыть предыдущую запись (Crtl + Стрелка вверх)">↑</Button>
-            <Button Command="{Binding Appointment.MoveHrSelectionCommand}"
-                    CommandParameter="{StaticResource False}" ToolTip="Открыть следующую запись (Crtl + Стрелка вниз)" >↓</Button>
-        </StackPanel>
+                <DockPanel>
+                    <Image Source="{StaticResource closeImage}" />
+                </DockPanel>
+            </Button>
+        </DockPanel>
 
         <!--DataContext is editing HealthRecordViewModel -->
-        <StackPanel Grid.Column="1" DataContext="{Binding HealthRecord}" Margin="0,10,0,0">
+        <StackPanel Grid.Row="1" DataContext="{Binding HealthRecord}" Margin="0,10,0,0">
             <StackPanel.Resources>
                 <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
             </StackPanel.Resources>
@@ -67,17 +78,6 @@
 
                     <!--DataContext is HrEditorViewModel-->
                     <search:NewAutocomplete DataContext="{Binding DataContext.Autocomplete, ElementName=editor}" />
-
-                    <!--<TextBox Text="{Binding NumValue, StringFormat={}{0:G6}, TargetNullValue=''}"
-                             ToolTip="Числовое значение"
-                             Width="60"
-                             Margin="10,0,0,0"
-                             Grid.Column="1"
-                             HorizontalContentAlignment="Right" HorizontalAlignment="Right">
-                        <controls:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource watermark}" Margin="5,0,0,0">число</TextBlock>
-                        </controls:WatermarkService.Watermark>
-                    </TextBox>-->
                 </Grid>
             </DockPanel>
             <DockPanel>
@@ -134,43 +134,6 @@
                 <Label Content="комментарий" />
                 <TextBox Text="{Binding Comment}" />
             </DockPanel>
-        </StackPanel>
-
-        <!--DataContext is HrEditorViewModel-->
-        <StackPanel Grid.Column="2" Margin="20,0,0,0" VerticalAlignment="Center">
-            <StackPanel.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Margin" Value="0,0,0,10" />
-                    <Setter Property="Height" Value="23" />
-                    <Setter Property="HorizontalContentAlignment" Value="Left" />
-                </Style>
-                <Style TargetType="Image">
-                    <Setter Property="Margin" Value="0,0,5,0" />
-                    <Setter Property="SnapsToDevicePixels" Value="True" />
-                    <Setter Property="Height" Value="16" />
-                </Style>
-            </StackPanel.Resources>
-
-            <Button Command="{Binding DataContext.Appointment.AddHealthRecordCommand,  RelativeSource={RelativeSource AncestorType=screens:NewCard}}"
-                    ToolTip="Добавить запись (Ctrl + Enter)"
-                    Margin="0,0,0,20">
-                <DockPanel>
-                    <Image Source="{StaticResource addImage}" />
-                    <TextBlock Text="Добавить" />
-                </DockPanel>
-            </Button>
-            <Button Command="{Binding RevertCommand}" ToolTip="Отменить изменения">
-                <DockPanel>
-                    <Image Source="{StaticResource undoImage}" />
-                    <TextBlock Text="Отменить" />
-                </DockPanel>
-            </Button>
-            <Button Command="{Binding DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить запись (Del)">
-                <DockPanel>
-                    <Image Source="{StaticResource deleteImage}"  Width="16" />
-                    <TextBlock Text="Удалить" />
-                </DockPanel>
-            </Button>
         </StackPanel>
     </Grid>
 </UserControl>
