--- a/Diagnosis.App/Screens/NewPatientEditor.xaml
+++ b/Diagnosis.App/Screens/NewPatientEditor.xaml
@@ -56,50 +56,50 @@
                 </ListView>
                 <Button Command="{Binding StartCourseCommand}"
                         VerticalAlignment="Center"
-                        Content="Начать курс" />
+                        Content="_Начать курс" />
             </StackPanel>
         </Grid>
 
-        <StackPanel Grid.Column="1" DataContext="{Binding Patient}">
-            <StackPanel.Resources>
-                <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
-                <Style TargetType="Label" BasedOn="{StaticResource label120}" />
-                <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" >
-                    <Style.Triggers>
-                        <Trigger Property="Validation.HasError" Value="true">
-                            <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </StackPanel.Resources>
-            <!-- PatientViewModel -->
-            <DockPanel>
-                <Label Content="Метка" />
-                <TextBlock Text="{Binding Label, ValidatesOnDataErrors=True}" />
-            </DockPanel>
-            <DockPanel>
-                <Label Content="Фамилия" />
-                <TextBox Text="{Binding LastName, ValidatesOnDataErrors=True}" />
-            </DockPanel>
-            <DockPanel>
-                <Label Content="Имя" />
-                <TextBox Text="{Binding FirstName, ValidatesOnDataErrors=True}" />
-            </DockPanel>
-            <DockPanel>
-                <Label Content="Отчество" />
-                <TextBox Text="{Binding MiddleName, ValidatesOnDataErrors=True}" />
-            </DockPanel>
-            <DockPanel>
-                <Label Content="Дата рождения" />
-                <editors:AgePicker Margin="0,1,0,-15" />
-            </DockPanel>
-            <DockPanel>
-                <Label Content="Пол" />
-                <editors:SexChooser Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" />
-            </DockPanel>
-
-            <editors:PropertiesChooser Margin="0,5" />
-        </StackPanel>
+        <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto">
+            <StackPanel  DataContext="{Binding Patient}">
+                <StackPanel.Resources>
+                    <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
+                    <Style TargetType="Label" BasedOn="{StaticResource label120}" />
+                    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" >
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="true">
+                                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </StackPanel.Resources>
+                <!-- PatientViewModel -->
+                <DockPanel>
+                    <Label Content="Метка" />
+                    <TextBlock Text="{Binding Label, ValidatesOnDataErrors=True}" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Фамилия" />
+                    <TextBox Text="{Binding LastName, ValidatesOnDataErrors=True}" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Имя" />
+                    <TextBox Text="{Binding FirstName, ValidatesOnDataErrors=True}" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Отчество" />
+                    <TextBox Text="{Binding MiddleName, ValidatesOnDataErrors=True}" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Дата рождения" />
+                    <editors:AgePicker Margin="0,1,0,-15" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Пол" />
+                    <editors:SexChooser Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                </DockPanel>
+            </StackPanel>
+        </ScrollViewer>
 
         <StackPanel Grid.Row="1" Grid.Column="1" Style="{StaticResource DialogButtonsPanel}">
             <Button Name="saveButton" IsDefault="True" Command="{Binding SaveCommand}">
