--- a/Diagnosis.App/Controls/CardParts/Appointment.xaml
+++ b/Diagnosis.App/Controls/CardParts/Appointment.xaml
@@ -27,7 +27,7 @@
         <KeyBinding Modifiers="Control" Key="Down" Command="{Binding MoveHrSelectionCommand}" CommandParameter="{StaticResource False}" />
     </UserControl.InputBindings>
     <!--DataContext is AppointmentViewModel-->
-    <Grid Margin="10,5,10,0">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
