--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -51,13 +51,13 @@
         
         <shell:MenuBar Grid.ColumnSpan="2"
                        DataContext="{Binding MenuBar}"
-                       Visibility="{Binding MenuVisible, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
+                       Visibility="{Binding DataContext.MenuVisible, ElementName=root,  Converter={StaticResource BooleanToVisibilityConverter}}" />
 
         <shell:AsidePanels 
                         Margin="0,0,-2,0"
                         Padding="0"
                    DataContext="{Binding RightAside}"
-                   Visibility="{Binding MenuVisible, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                   Visibility="{Binding DataContext.MenuVisible, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}}"
                    Grid.Row="1"
                    Grid.Column="1"
                    Grid.RowSpan="2" />       
