--- a/Diagnosis.App/Controls/CardParts/Appointment.xaml
+++ b/Diagnosis.App/Controls/CardParts/Appointment.xaml
@@ -6,7 +6,7 @@
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <!-- ShortAppointmentViewModel-->
+    <!-- ShortAppointmentViewModel or AppointmentViewModel-->
     <DockPanel MinWidth="70">
         <TextBlock Text="{Binding DateTime, Converter={StaticResource DateLabel}}"
                                        DockPanel.Dock="Top" />
