no courses in patient editor
--HG--
branch : patientEditor

--- a/Diagnosis.App/Screens/NewPatientEditor.xaml
+++ b/Diagnosis.App/Screens/NewPatientEditor.xaml
@@ -18,7 +18,7 @@
     </UserControl.Resources>
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="180" />
+            <ColumnDefinition MaxWidth="180" Width="auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -27,7 +27,7 @@
         </Grid.RowDefinitions>
 
         <Grid Margin="0,0,10,0">
-            <StackPanel VerticalAlignment="Center" Visibility="{Binding Patient.NoCourses, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,0,10">
+            <!--<StackPanel VerticalAlignment="Center" Visibility="{Binding Patient.NoCourses, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,0,10">
                 <TextBlock Text="У пациента нет курсов"
                             HorizontalAlignment="Center"
                             Visibility="{Binding Patient.NoCourses, Converter={StaticResource BooleanToVisibilityConverter}}" />
@@ -51,7 +51,7 @@
                 <Button Command="{Binding StartCourseCommand}"
                         VerticalAlignment="Center"
                         Content="_Начать курс" />
-            </StackPanel>
+            </StackPanel>-->
         </Grid>
 
         <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto">
