--- a/Diagnosis.App/Screens/Card3.xaml
+++ b/Diagnosis.App/Screens/Card3.xaml
@@ -134,7 +134,7 @@
                         <card:HealthRecordsList DataContext="{Binding HrList}" />
 
                         <Border Grid.Row="2" BorderThickness="0,1,0,0" SnapsToDevicePixels="True"
-                                Visibility="{Binding HealthRecordEditor.IsActive, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                Visibility="{Binding HrEditor.IsActive, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Border.BorderBrush>
                                 <SolidColorBrush Color="Gray" />
                             </Border.BorderBrush>
@@ -146,7 +146,7 @@
                             </Border.Background>
 
                             <Grid Margin="10,0,10,10">
-                                <editors:HealthRecordEditorShared DataContext="{Binding HealthRecordEditor}" />
+                                <editors:HealthRecordEditorShared DataContext="{Binding HrEditor}" />
                             </Grid>
                         </Border>
                     </Grid>
