--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Diagnosis.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:s="clr-namespace:System;assembly=mscorlib"
-             Startup="Application_Startup">
+             xmlns:s="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
