ui. Fix card left-column width and edit patient button z-index.

--- a/Diagnosis.App/Screens/Card3.xaml
+++ b/Diagnosis.App/Screens/Card3.xaml
@@ -97,6 +97,7 @@
 
         <Style x:Key="holderHeaderStyle" TargetType="UserControl">
             <Setter Property="MaxWidth" Value="210" />
+            <Setter Property="MinWidth" Value="200" />
         </Style>
 
         <screens:CurrentHrsHolderDataTemplateSelector x:Key="holderHeaderSelector">
