--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl x:Class="Diagnosis.App.Windows.Shell.MenuBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:Diagnosis.ViewModels;assembly=Diagnosis.ViewModels"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="600">
     <!-- MenuBarVM -->
     <Grid>
@@ -12,10 +12,10 @@
             <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
         </Grid.Background>
         <Menu>
-            <MenuItem Header="_Пациенты">
-                <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все пациенты" />
+            <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все пациенты" />
+            <!--<MenuItem Header="_Пациенты">
                 <MenuItem Command="{Binding AddPatientCommand}" Header="_Новый..." />
-            </MenuItem>
+            </MenuItem>-->
             <!--<MenuItem Header="_Справочники">
                 <MenuItem Command="{Binding OpenWordsCommand}" Header="_Слова" />
             </MenuItem>
