--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -23,6 +23,15 @@
                 <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
                 <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
             </InputBindingCollection>
+            <InputBindingCollection x:Shared="False" x:Key="WordInputBindings">
+                <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
+                <KeyBinding Modifiers="Alt" Key="F" Command="{Binding SendToSearchCommand}" />
+                <KeyBinding Modifiers="Control" Key="N" 
+                    Command="{Binding DataContext.AddCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}" 
+                    CommandParameter="{Binding}"/>
+
+                <MouseBinding MouseAction="LeftClick" Command="{Binding ToggleCommand}" />
+            </InputBindingCollection>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
