search. Search works with hrs in patient and course
Search results in tree with HrHolderSearchResultViewModel.
Hide offset and AppointmentDate options.

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -23,6 +23,11 @@
                 <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
                 <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
             </InputBindingCollection>
+            <InputBindingCollection x:Shared="False" x:Key="SearchResultInputBindings">
+                <KeyBinding Key="Space" Command="{Binding OpenCommand}" />
+                <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
+                <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
+            </InputBindingCollection>
             <InputBindingCollection x:Shared="False" x:Key="WordInputBindings">
                 <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
                 <KeyBinding Modifiers="Alt" Key="F" Command="{Binding SendToSearchCommand}" />
