--- a/Diagnosis.App/Resources/ConverterResources.xaml
+++ b/Diagnosis.App/Resources/ConverterResources.xaml
@@ -21,4 +21,5 @@
     <conv:AgeToYearsLabel x:Key="ageLabel" />
     <conv:InListConverter x:Key="inList" />
     <conv:HrToItemsString x:Key="hrItems" />
+    <conv:NullableBooleanConverter x:Key="NullableBoolean" />
 </ResourceDictionary>
